@@ -1,3 +1,8 @@
+Major changes in 3.24.0:
+* Updated translations for:
+    * French (Guillaume Bernard)
+    * Friulian (Fabio Tomat)
+
 Major changes in 3.23.92:
 * Fix first weekday in Week view (Joyjit Choudhury)
 * Start searching after 3 characters (George Willian Condomitti)
